# CPU_Analyzer

./: Analyzer.c  Analyzer.h  CMakeLists.txt  Logger.txt  MyLogger.c  MyLogger.h  Printer.c  Printer.h  README.md  Reader.c  Reader.h  RunTests.sh  WatchDog.c  WatchDog.h  main  main.c  main.h
Includs/Inc/: CMakeLists.txt  Printer.h  WatchDog.h  main.h
Includs/Src/: Printer.c  Reader.c
New_CPU/: CMakeLists.txt  LeakCheckReportFile.txt  README.md  procstat.txt
New_CPU/Includs/: CMakeLists.txt
New_CPU/Includs/Inc/: Analayzer.h  CircuralBuffer.h  Loger.h  Printer.h  Reader.h  Watchdog.h  main.h
New_CPU/Includs/Src/: Analayzer.c  CircuralBuffer.c  Loger.c  Printer.c  Reader.c  WatchDog.c
New_CPU/Src/: App.c  CMakeLists.txt  CircuralTest.c  FakeLogs.txt  LoggerTest.c  Logs.txt  Reader_AnalyzerTest.c
Src/: CMakeLists.txt  TestRunnet.c  main.c
Test/: CMakeLists.txt
Test/Inc/: TestFixture.h
Test/Src/: TestFixture.c
Tests/: CPU_Analyzer  CountCPUTest.py  TestCpu  TestCpu.c  TestWatchDog.py
